infra-configs/kafka-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: aivegoteyes-deploy
spec:
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
